bf16: Enable some ops for BFloat16: 	softmax 	layer_norm 	bernoulli 	index_put 	mse_loss 	pow 	max, min 	addcmul, addcdiv 	_th_uniform_ 	_thnn_tanh         UnaryOps: frac, neg, digamma, trigamma, sinh, cosh, acos, asin, abs,                   atan, ceil, cos, erf, erfc, exp, expm1, floor, log, log10,                   log1p, log2, round, sin, sqrt, tan, trunc, lgamma, erfinv         _th_indexSelect, sigmoid, reduce, norm, std_var, bmm
Change-Id: If8208c4add60306ab586db858ce3ce6441d9456f

--- a/aten/src/ATen/nn.yaml
+++ b/aten/src/ATen/nn.yaml
@@ -115,6 +115,9 @@
   scalar_check:
     output: 'false'
     grad_input: 'false'
+  CPU:
+    forward_scalar_types: ['Float', 'Double', 'BFloat16']
+    backward_scalar_types: ['Float', 'Double', 'BFloat16']
 
 # Convolutions
 
