--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2467,6 +2467,7 @@
   dispatch:
     CPU: softmax_backward_cpu
     CUDA: softmax_backward_cuda
+    MkldnnCPU: mkldnn_softmax_backward
 
 - func: split.Tensor(Tensor(a) self, int split_size, int dim=0) -> Tensor(a)[]
   variants: function, method
